--- a/themes/unc_charlotte4/css/layouts/twocolumn/twocolumn.layout.no-query.css
+++ b/themes/unc_charlotte4/css/layouts/twocolumn/twocolumn.layout.no-query.css
@@ -87,6 +87,7 @@ html body .l-page {
         width: 100%;
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 50%;
         clear: right;
         float: left;
@@ -98,6 +99,7 @@ html body .l-page {
         width: 100%;
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 50%;
         clear: right;
         float: left;
@@ -150,6 +152,7 @@ html body .l-page {
       body.print-tablet .l-page .l-main .l-content-center .l-region--content-left {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 50%;
         clear: right;
         float: left;
@@ -158,6 +161,7 @@ html body .l-page {
       body.print-tablet .l-page .l-main .l-content-center .l-region--content-right {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 50%;
         clear: right;
         float: left;
@@ -189,6 +193,7 @@ html body .l-page {
       body.print-desktop .l-page .l-main .l-content-center .l-region--content-left {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 50%;
         clear: right;
         float: left;
@@ -197,6 +202,7 @@ html body .l-page {
       body.print-desktop .l-page .l-main .l-content-center .l-region--content-right {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 50%;
         clear: right;
         float: left;
