--- a/themes/unc_charlotte4/css/layouts/default_inner/default_inner.layout.css
+++ b/themes/unc_charlotte4/css/layouts/default_inner/default_inner.layout.css
@@ -96,7 +96,8 @@ html body .l-page {
             margin-left: 0%;
             clear: none;
             padding-bottom: 2000px;
-            margin-bottom: -2000px; } }
+            margin-bottom: -2000px;
+            padding-right: 20px; } }
         @media (min-width: 70em) {
           html body .l-page .l-main .l-content-center .wrapper .l-nav-sidebar {
             width: 25%;
@@ -112,6 +113,7 @@ html body .l-page {
           html body .l-page .l-main .l-content-center .wrapper .l-content-wrapper {
             padding-bottom: 2000px;
             margin-bottom: -2000px;
+            padding-right: 20px;
             overflow: hidden;
             width: 75%;
             float: right;
@@ -137,6 +139,7 @@ html body .l-page {
             html body .l-page .l-main .l-content-center .wrapper .l-content-wrapper .l-content {
               padding-bottom: 2000px;
               margin-bottom: -2000px;
+              padding-right: 20px;
               width: 75%;
               clear: right;
               float: left;
@@ -158,6 +161,7 @@ html body .l-page {
             html body .l-page .l-main .l-content-center .wrapper .l-content-wrapper .l-promo-sidebar {
               padding-bottom: 2000px;
               margin-bottom: -2000px;
+              padding-right: 20px;
               width: 25%;
               clear: right;
               float: left;
@@ -177,7 +181,6 @@ html body .l-page {
     width: 100%; }
     html body .l-page .l-footer .l-footer-first .l-region--footer-first {
       display: block;
-      float: left;
       width: 100%; }
     html body .l-page .l-footer .l-footer-second .l-region--footer-second {
       display: block;
@@ -214,10 +217,12 @@ html body .l-page {
         margin-right: 0;
         clear: none;
         padding-bottom: 2000px;
-        margin-bottom: -2000px; }
+        margin-bottom: -2000px;
+        padding-right: 20px; }
       body.print-tablet .l-page .l-main .l-content-center .l-content-wrapper {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         overflow: hidden;
         width: 75%;
         float: left;
@@ -227,6 +232,7 @@ html body .l-page {
         body.print-tablet .l-page .l-main .l-content-center .l-content-wrapper .l-content {
           padding-bottom: 2000px;
           margin-bottom: -2000px;
+          padding-right: 20px;
           width: 75%;
           clear: right;
           float: left;
@@ -235,6 +241,7 @@ html body .l-page {
         body.print-tablet .l-page .l-main .l-content-center .l-content-wrapper .l-promo-sidebar {
           padding-bottom: 2000px;
           margin-bottom: -2000px;
+          padding-right: 20px;
           width: 25%;
           clear: right;
           float: left;
@@ -266,6 +273,7 @@ html body .l-page {
       body.print-desktop .l-page .l-main .l-content-center .l-nav-sidebar {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         width: 25%;
         float: left;
         margin-right: -100%;
@@ -274,6 +282,7 @@ html body .l-page {
       body.print-desktop .l-page .l-main .l-content-center .l-content-wrapper {
         padding-bottom: 2000px;
         margin-bottom: -2000px;
+        padding-right: 20px;
         overflow: hidden;
         width: 75%;
         float: right;
@@ -283,6 +292,7 @@ html body .l-page {
         body.print-desktop .l-page .l-main .l-content-center .l-content-wrapper .l-content {
           padding-bottom: 2000px;
           margin-bottom: -2000px;
+          padding-right: 20px;
           width: 75%;
           clear: right;
           float: left;
@@ -291,6 +301,7 @@ html body .l-page {
         body.print-desktop .l-page .l-main .l-content-center .l-content-wrapper .l-promo-sidebar {
           padding-bottom: 2000px;
           margin-bottom: -2000px;
+          padding-right: 20px;
           width: 25%;
           clear: right;
           float: left;
