--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -118,6 +118,7 @@ img{
 		@include arrowafter();
 	}
 	a{
+		@include f-impact();
 		color:$green;
 		text-decoration:none;
 		text-transform:uppercase;
@@ -306,7 +307,7 @@ body{
 							input{  
 								display: inline-block;
 								height: 16px !important;
-								width: 121px;
+								width: 160px;
 								padding-left: 6px;
 								padding-right: 30px;
 								padding-top: 2px;
@@ -484,6 +485,7 @@ body{
 			}
 			input{
 				width:auto;
+				float:left;
 				height:25px;
 			}
 		}
@@ -736,10 +738,11 @@ body .field-collection-container{
 			.field--name-field-read-more-link{
 				display:block;
 				float:left;
-				padding-right:20px;
+				padding: 10px 20px 10px 0;
 				position:relative;
 				&:after{
 					@include arrowafter();
+					top: calc(50% - 8px);
 				}
 				a{
 					color:$green;
@@ -762,8 +765,10 @@ body .field-collection-container{
 				position:relative;
 				overflow:hidden;
 				height:60vw;
+				margin-top:20px;
 				@include breakpoint($tab,true){
 					padding:0 20px;
+					margin-top:0;
 				}
 				.field--name-field-image-upload{
 					.field__items{
@@ -837,7 +842,7 @@ body .field-collection-container{
 			&.two{
 				.field__item{
 					@include breakpoint($tab,true){
-						width:33vw;
+						width:50%;
 						height:25vw;
 					}
 				}
@@ -845,7 +850,7 @@ body .field-collection-container{
 			&.three{
 				.field__item{
 					@include breakpoint($tab,true){
-						width:22vw;
+						width:33%;
 						height:16vw;
 					}
 				}
@@ -940,6 +945,7 @@ body .field-collection-container{
 						top:54px;
 					}
 					a{
+						@include f-impact(18px);
 						color:$green;
 						display:block;
 						float:right;
@@ -1396,6 +1402,7 @@ html #block-views-basic-page-featured-block{
 					@include arrowafter();
 				}
 				a{
+					@include f-impact(18px);
 					color:$green;
 					text-decoration:none;
 					text-transform:uppercase;
@@ -1422,6 +1429,7 @@ html #block-views-basic-page-featured-block{
 				@include arrowafter();
 			}
 			a{
+				@include f-impact(18px);
 				color:$green;
 				text-decoration:none;
 				&:hover{
@@ -1432,7 +1440,9 @@ html #block-views-basic-page-featured-block{
 	}
 }
 #block-bean-facilities-showcase{
-	background:url("/sites/all/themes/unc_charlotte4/img/stadium_blur.jpg") no-repeat right bottom;
+	@include breakpoint($tab,true){
+		background:url("/sites/all/themes/unc_charlotte4/img/stadium_blur.jpg") no-repeat center bottom;
+	}
 	background-size:cover;
 	.block__content{
 		max-width:$maxwidth;
@@ -2451,7 +2461,7 @@ html{
 								text-align:center;
 								line-height:30px;
 								@include breakpoint($tab,true){
-									padding:0 15px;
+									padding:0 30px 0 0;
 									text-align:left;
 									line-height:60px;
 								}
@@ -2471,7 +2481,6 @@ html{
 				}
 				margin:auto;
 				float:none;
-				padding-right:20px;
 				@include breakpoint($tab,true){
 					float:right;
 					width:auto;
@@ -2517,7 +2526,10 @@ html{
 	    #static-footer {
 	      background: url("../img/footer-bg.png") repeat-x scroll left top transparent;
 	      clear: both;
-	      height: 110px;
+	      height:110px;
+	      @include breakpoint($tab,true){
+	      	height: 200px;
+	      }
 	      position:relative;
 	      .hidden-phone{}
 	      #utility-bar{
@@ -2532,7 +2544,7 @@ html{
 	          list-style-type: none;
 	          padding-top: 0;
 	          margin-bottom: 0px;
-	          padding-left: 10px;
+	          padding-left: 0px;
 	          margin-top:0;
 	          li{
 	            display: block;
@@ -2557,6 +2569,7 @@ html{
 	        #footer-search{
 	          display:block;
 	          float:right;
+	          padding-right:10px;
 	          #utility-search-input {
 	            border: medium none;
 	            display: block;
@@ -2601,13 +2614,15 @@ html{
 	        #footer-name{
 	          display:block;
 	          float:left;
-	          margin-top: 10px;
+	          margin-top:10px;
 	          p{
 	            color: #666666;
 	            font-family: arial,helvetica,sans-serif;
 	            margin-bottom: 8px;
 	            margin-top: 0px;
-	            margin-left: 20px;
+	            margin-left: 0px;
+	            font-size:12px;
+	            line-height:14px;
 	          }
 	          a{
 	            text-decoration:none;
@@ -2635,7 +2650,7 @@ html{
 	              font-weight: bold;
 	              @include breakpoint($tab,true){
 		              margin-bottom: 5px;
-		              margin-right: 20px;
+		              margin-right: 0px;
 		              margin-top:10px;
 		          }
 	            }
